samples/_failures_safe/1761616170_4e46bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8bfe7a3.c: In function ‘main’:
./samples/SAFE/__tmp_f8bfe7a3.c:139:30: error: missing terminating " character
  139 |     add_log_entry(&analyzer, "2024-01-15 10:30:
      |                              ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f8bfe7a3.c:139:5: error: expected expression at end of input
  139 |     add_log_entry(&analyzer, "2024-01-15 10:30:
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f8bfe7a3.c:139:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_f8bfe7a3.c:58:5: note: declared here
   58 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f8bfe7a3.c:139:5: error: expected declaration or statement at end of input
  139 |     add_log_entry(&analyzer, "2024-01-15 10:30:
      |     ^~~~~~~~~~~~~
